--- a/package.json
+++ b/package.json
@@ -20,15 +20,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^1.0.1",
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/class-validator": "^0.13.1",
     "@nestjs/common": "^10.1.2",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/cache-manager": "^4.0.2",
+    "cache-manager": "^5.2.3",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.3.1",
+    "ioredis": "^5.3.2",
+    "nestjs-ioredis": "^0.1.8",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize": "^6.32.1",
@@ -40,6 +48,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
