--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.9.0",
     "@nestjs-modules/ioredis": "^1.0.1",
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/class-validator": "^0.13.1",
     "@nestjs/common": "^10.1.2",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.2",
+    "@nestjs/elasticsearch": "^10.0.1",
+    "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@types/cache-manager": "^4.0.2",
     "cache-manager": "^5.2.3",
